# prueba-code-quality

./: .gitignore  README.md  pyproject.toml
notebooks/: experiments.ipynb
prueba/: main.py  utils.py
