[tool.poetry]
name = "prueba"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.isort]
profile = "black"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
scikit-learn = "^1.5.1"
black = "^24.8.0"
jupyter = "^1.0.0"
isort = "^5.13.2"
pylint = "^3.2.6"
pyarrow = "^17.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
